- Full implementaton of complex assignments (e.g. class(x$a[4]) <- "foo") - (More) complete implementation of indexing operators - Implementation of file.info - Started to move all type conversion stuff into the SEXP objects themselves (goal of replacing the unwieldy AtomicAccessor classes) - Added @Primitive annotation for primitive methods that allows you to specify R-language names of java methods directly in the implementation rather than in FunctionTable
git-svn-id: https://renjin.googlecode.com/svn/trunk@60 b722d886-ae41-2056-5ac6-6db9963f4c99